# lava-test-plans

./: Makefile  README.md  pyproject.toml
.github/workflows/: test-plans-pipeline.yml
lava_test_plans/: __main__.py  flasher.jinja2  master.jinja2  utils.py
lava_test_plans/devices/: iq-9075-evk  qcs615-adp-air  qcs6490-rb3gen2-core-kit  qcs8300-ride-sx  qcs9100-ride-sx  qrb2210-rb1-core-kit
lava_test_plans/include/: auth-header.jinja2  fastboot.jinja2  flasher.jinja2  postprocess.jinja2
lava_test_plans/projects/meta-qcom/: fastboot.jinja2  flasher.jinja2  variables-db845c-rootfs.ini  variables.ini
lava_test_plans/projects/meta-qcom/include/: auth-header.jinja2
lava_test_plans/projects/qcom-deb-images/: flasher.jinja2  variables.yaml
lava_test_plans/projects/qcom-deb-images/devices/: qcs6490-rb3gen2-core-kit  qrb2210-rb1-core-kit
lava_test_plans/testcases/: pre-merge-basic.yaml
lava_test_plans/testcases/templates/: master.jinja2
lava_test_plans/testplans/meta-qcom/poky-altcfg/: boot.yaml
test/: test_lava_job_visibility.py  test_lava_tags.py  test_lava_test_plans.py  test_validate_variables.py  variables-invalid.yaml
